--- a/EDA_nominas_publicas_rd.ipynb
+++ b/EDA_nominas_publicas_rd.ipynb
@@ -24938,6 +24938,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Me : Mediana\n",
+        "\n",
+        "Q1 : Primer cuartíl\n",
+        "\n",
+        "Q2 : Tercer cuartíl"
+      ],
+      "metadata": {
+        "id": "vojx5yamLJ46"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Key Takeaways de este EDA\n",
         "\n",
         "Basado en el análisis exploratorio de datos (EDA) realizado, aquí están los principales hallazgos (key takeaways) que podrías incluir al final del notebook:\n",
@@ -24970,10 +24983,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Referencias\n",
+        "* [SNS Nominas](https://sns.gob.do/transparencia/recursos-humanos/nominas-de-empleados/)\n",
+        "* [UASD Nominas](https://transparencia.uasd.edu.do/?q=recursos-humanos/nomina)\n",
+        "* [OPRET Nominas](https://www.opret.gob.do/transparencia/rrhh_nominas)\n",
+        "* [MIVED Nominas](https://mived.gob.do/transparencia/index.php/recursos-humanos/nominas-fijos)\n",
+        "* [UAF Nóminas](https://www.uaf.gob.do/transparencia/index.php/recursos-humanos/nomina-de-empleados)"
+      ],
+      "metadata": {
+        "id": "K882ZI9n1smp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "KoZhxmgdxkKi"
+        "id": "innMU8OL2YX1"
       },
       "execution_count": null,
       "outputs": []
